--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "website for omp",
   "main": "index.js",
   "scripts": {
-    "build-css": "node-sass --include-path scss assets/scss/main.scss public/css/main.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\""
+    "build-css": "./bin/build-css",
+    "watch-css": "./bin/watch-css"
   },
   "repository": {
     "type": "git",
